--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation group: 'javax.xml.soap', name: 'javax.xml.soap-api', version: '1.4.0'
+// https://mvnrepository.com/artifact/javax.xml.soap/saaj-api
+    implementation group: 'javax.xml.soap', name: 'saaj-api', version: '1.3.3'
+    implementation group: 'soap', name: 'soap', version: '2.3.1'
+    implementation 'com.github.smart-fun:XmlToJson:1.4.4'
+
 
 }
