--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     implementation 'com.github.smart-fun:XmlToJson:1.4.4'
     implementation 'com.github.claudiodegio:MsvSearch:1.0.0'
     implementation 'com.byteshaft.requests:requests:0.5.2'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
 }
