--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation 'com.github.claudiodegio:MsvSearch:1.0.0'
     implementation 'com.byteshaft.requests:requests:0.5.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
-
+    implementation 'com.github.ybq:Android-SpinKit:1.1.0'
 }
