--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ActivityLookup"></activity>
+        <activity android:name=".LoadingActivity" />
     </application>
 
 </manifest>
