--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,25 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AppGlobals"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityLookup"></activity>
-        <activity android:name=".LoadingActivity" />
+        <activity android:name=".ActivityLookup"  android:screenOrientation="portrait"/>
+        <activity android:name=".LoadingActivity" android:screenOrientation="portrait" />
+        <activity android:name=".DetailActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".NameDetail"   android:screenOrientation="portrait" />
     </application>
 
 </manifest>
