--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.byteshaft.abnlookup"
+        applicationId "com.alazoitech.abntool"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -31,4 +31,11 @@ dependencies {
     implementation 'com.byteshaft.requests:requests:0.5.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.ybq:Android-SpinKit:1.1.0'
+    implementation 'com.google.firebase:firebase-ads:15.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+
+
 }
+
+apply plugin: 'com.google.gms.google-services'
+
